--- a/cogsci_writeup/library.bib
+++ b/cogsci_writeup/library.bib
@@ -20,6 +20,29 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{seiver2013did,
+  title={Did she jump because she was the big sister or because the trampoline was safe? Causal inference and the development of social attribution},
+  author={Seiver, Elizabeth and Gopnik, Alison and Goodman, Noah D},
+  journal={Child development},
+  volume={84},
+  number={2},
+  pages={443--454},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+
+@article{gweon201116,
+  title={16-month-olds rationally infer causes of failed actions},
+  author={Gweon, Hyowon and Schulz, Laura},
+  journal={Science},
+  volume={332},
+  number={6037},
+  pages={1524--1524},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{harris2011young,
   title={Young children's selective trust in informants},
   author={Harris, Paul L and Corriveau, Kathleen H},
@@ -155,6 +178,50 @@
   publisher={Wiley Online Library}
 }
 
+@article{brophy1981teacher,
+  title={Teacher praise: A functional analysis},
+  author={Brophy, Jere},
+  journal={Review of educational research},
+  volume={51},
+  number={1},
+  pages={5--32},
+  year={1981},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{mueller1998praise,
+  title={Praise for intelligence can undermine children's motivation and performance.},
+  author={Mueller, Claudia M and Dweck, Carol S},
+  journal={Journal of personality and social psychology},
+  volume={75},
+  number={1},
+  pages={33},
+  year={1998},
+  publisher={American Psychological Association}
+}
+
+@article{henderlong2007effects,
+  title={The effects of person versus performance praise on children’s motivation: Gender and age as moderating factors},
+  author={Henderlong Corpus, Jennifer and Lepper, Mark R},
+  journal={Educational psychology},
+  volume={27},
+  number={4},
+  pages={487--508},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+@article{sobel2013knowledge,
+  title={Knowledge matters: How children evaluate the reliability of testimony as a process of rational inference.},
+  author={Sobel, David M and Kushnir, Tamar},
+  journal={Psychological Review},
+  volume={120},
+  number={4},
+  pages={779},
+  year={2013},
+  publisher={American Psychological Association}
+}
+
 @article{lane2013informants,
   title={Informants' traits weigh heavily in young children's trust in testimony and in their epistemic inferences},
   author={Lane, Jonathan D and Wellman, Henry M and Gelman, Susan A},
@@ -183,6 +250,27 @@
   booktitle={Proceedings of the 38th Annual Conference of the Cognitive Science Society},
   year={2016},
   organization={Cognitive Science Society}
+}
+
+@article{delin1994praise,
+  title={Praise: More than just social reinforcement},
+  author={Delin, Catherine R and Baumeister, Roy F},
+  journal={Journal for the theory of social behaviour},
+  volume={24},
+  number={3},
+  pages={219--241},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{bonawitz2016computational,
+  title={Computational models of development, social influences},
+  author={Bonawitz, Elizabeth and Shafto, Patrick},
+  journal={Current Opinion in Behavioral Sciences},
+  volume={7},
+  pages={95--100},
+  year={2016},
+  publisher={Elsevier}
 }
 
 @article{schneider1998performance,
@@ -228,7 +316,7 @@
 }
 
 @article{brummelman2014s,
-  title={“That’s Not Just Beautiful—That’s Incredibly Beautiful!” The Adverse Impact of Inflated Praise on Children With Low Self-Esteem},
+  title={``That's Not Just Beautiful -- That’s Incredibly Beautiful!'' The Adverse Impact of Inflated Praise on Children With Low Self-Esteem},
   author={Brummelman, Eddie and Thomaes, Sander and Orobio de Castro, Bram and Overbeek, Geertjan and Bushman, Brad J},
   journal={Psychological science},
   volume={25},
@@ -309,3 +397,36 @@
   year={1999},
   publisher={American Psychological Association}
 }
+
+
+@article{Koenig:2005p146,
+author = {Koenig, Melissa A and Harris, Paul L},
+title = {{Preschoolers mistrust ignorant and inaccurate speakers.}},
+journal = {Child Development},
+year = {2005},
+volume = {76},
+number = {6},
+pages = {1261--1277},
+month = nov
+}
+
+@article{Burdett:2016es,
+author = {Burdett, Emily R R and Lucas, Amanda J and Buchsbaum, Daphna and McGuigan, Nicola and Wood, Lara A and Whiten, Andrew},
+title = {{Do Children Copy an Expert or a Majority? Examining Selective Learning in Instrumental and Normative Contexts.}},
+journal = {PLoS ONE},
+year = {2016},
+volume = {11},
+number = {10},
+pages = {e0164698}
+}
+
+@article{Bridgers:2016ge,
+author = {Bridgers, Sophie and Buchsbaum, D and Seiver, Elizabeth and Griffiths, Thomas L and Gopnik, Alison},
+title = {{Children's causal inferences from conflicting testimony and observations.}},
+journal = {Developmental Psychology},
+year = {2016},
+volume = {52},
+number = {1},
+pages = {9--18}
+}
+
